CHANGE LOG
=========================================================================

2015-06-10 Thomas Holder <thomas.holder@schrodinger.com>

	* fetch 'cif' by default (was: pdb)

	* warn if selecting with lower-case arguments to help identifying
	  legacy selections which are incompatible with ignore_case=0

	* port selection macro parsing from Python to C

2015-05-20 Thomas Holder <thomas.holder@schrodinger.com>

	* change default (!) of "ignore_case" setting to off. Case insensitve
	  identifier matching is not practical anymore with large structures
	  which use upper and lower case chain identifiers.

	* new setting "assembly" to load assemblies from mmCIF as multi-state
	  objects with all_states=1

	* new setting "cif_use_auth" controls whether mmCIF "auth" identifiers
	  are used or not (on by default)

	* mmCIF "CA/P ATOMS ONLY" chains: set atom-level cartoon_trace_atoms
	  and ribbon_trace_atoms

	* CIF discrete and irregular multi-model loading support

	* support "pdb_honor_model_number" setting for CIF

	* load multiple objects ("data_" blocks) from one CIF file (multiplex=-1)

	* don't store AtmToIdx, DiscreteAtmToIdx or DiscreteCSet to PSE
	  (unless pse_export_version <= 1.76)

	* 1.7.7.1 (unstable/experimental)

2015-05-04 Thomas Holder, Blaine Bell, Gabriel Marques

	* 1.7.6.0

	* VASP file support for: CHGCAR, OUTCAR, POSCAR, XDATCAR

	* psf file support

	* ignore SCALE matrices with negative determinant

	* fix crash when loading malformed CIF file

	* fix cif export for natoms = 0

	* fix several memory leaks

	* fix crash when saving PSE with deleted ramp

2015-04-20 Thomas Holder <thomas.holder@schrodinger.com>

	* new setting: pse_export_version to save to old session formats

	* fix memory leak in get_global_components_bond_dict

	* change setting default: pdb_conect_nodup 0 -> 1

	* fix Tcl/Tk File menu unicode handling

	* fix auto-complete for filenames with spaces

	* mmCIF: support CHEM_COMP_BOND from mmCIF file
